# capigen

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  RELEASING.md  claude.md  pyproject.toml  schema_reference.md
.github/workflows/: ci.yml  release.yml
src/capigen/: __init__.py  __main__.py  anchors.py  loader.py  spec.py  states.py  tools.py  validate.py
src/capigen/adapters/bridge/: __init__.py  options.schema.json
src/capigen/adapters/c/: __init__.py  comments.py  options.schema.json  render.py  resolve.py
src/capigen/adapters/c/templates/: duckdb.h.j2  duckdb_v2.h.j2  duckdb_v2_inline_functions.h  header.h.j2  module_content.h.j2
src/capigen/adapters/c/templates/_c_fragments/: _format.j2  _struct.j2  _type.j2  funcptr.j2
src/capigen/adapters/c/templates/macros/: parameters.j2
src/capigen/adapters/extension_header/: __init__.py  options.schema.json
src/capigen/adapters/extension_header/templates/: internal.hpp.j2
src/capigen/schema/: metadata.schema.json  module.schema.json
tests/: conftest.py  test_anchors.py  test_bridge.py  test_comments.py  test_extension_header.py  test_generate.py  test_resolve.py  test_schema.py  test_spec.py  test_tools.py  test_validate.py  test_version.py
tests/testspec/: metadata.yaml
tests/testspec/ext/: expected_consumer.h  expected_internal.hpp  metadata.yaml  template.h.in  template_full.h.in
tests/testspec/ext/core/: core.yaml
tests/testspec/ext/options/: extension_header.yaml
tests/testspec/v2/: metadata.yaml
tests/testspec/v2/core/: core.yaml
