[project]
name = "capigen"
version = "0.4.0"
description = "Declarative C ABI generator: define an API in YAML, validate it against a versioned schema, and generate the C header and bridge stubs."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "DuckDB" }]
keywords = ["codegen", "c-api", "abi", "idl", "header-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "jsonschema>=4.23.0",
]

[project.urls]
Homepage = "https://github.com/duckdb/capigen"
Repository = "https://github.com/duckdb/capigen"

[project.scripts]
capigen = "capigen.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/capigen"]
